[package]
name = "llvm-cov-json"
license = "AGPL-3.0-only"
description = "A library capable of parsing llvm-cov JSON exports."
authors = ["Nils Bars <nils_bars@t-online.de>"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/nbars/llvm-cov-json-rs"

[dependencies]
serde = {version="1.0.192", features = ["derive"]}
serde_json = "1.0.108"
